1.4.23 2014-12-05
-----------------
- Fixed minor replicaset reauthentication issues for High availability process.
- Added support for authdb as option for Db.prototype.logout to logout against another db than the current one when authSource has been used.
- Backported 2.0.X test suite to minimize maintenance between 1.4.x branch and 2.0.x.

1.4.22 2014-11-20
-----------------
- NODE-184, Correct message size validation

1.4.20 2014-11-14
-----------------
- Removed collectionsInfo method as it's incompatible with 2.8 or higher storage engines due to using namespace collections and a cursor.
- Fix LearnBoost/mongoose#2313: don't let user accidentally clobber geoNear params (Issue #1223, https://github.com/vkarpov15)

1.4.19 2014-10-09
-----------------
- Use findOne instead of find followed by nextObject (Issue #1216, https://github.com/sergeyksv).
- NODE-294, slowness in aggregation cursor caused do to batchSize being set to 1 by mistake.
- NODE-293, executing an insert with fullResult true throw TypeError: undefined is not a function.

1.4.18 2014-10-03
-----------------
- Cleanup of code removing handleCallback instances
- Throw error on missing callback on createIndex in strict mode (Issue #1214, https://github.com/marneborn)

1.4.17 2014-09-27
-----------------
- NODE-286 collection/query.js references undefined MongoError
- NODE-287 "MongoError is not defined" in options command

1.4.16 2014-09-26
-----------------
- Fix minor issue due to MongoError usage in options and listCollections

1.4.15 2014-09-25
-----------------
- Fix issues with collection.options

1.4.14 2014-09-24
-----------------
- Args leak to global namespace fix.

1.4.13 2014-09-24
-----------------
- NODE-283 Collection rename now always returns a new Collection object
- Added listCollections helper to Db.prototype
- Scram default authentication mechanism on 2.8 or higher if none is specified

1.4.12 2014-09-17
-----------------