@@ -41,7 +41,7 @@ var AggregationCursor = function(collection, serverCapabilities, options) {
 	// If allowDiskUse is set
 	if(typeof options.allowDiskUse == 'boolean') 
 		command.allowDiskUse = options.allowDiskUse;
-	
+
 	// Command cursor (if we support one)
 	var commandCursor = new CommandCursor(collection.db, collection, command);
 
@@ -94,7 +94,7 @@ var AggregationCursor = function(collection, serverCapabilities, options) {
 	  
 	  // Fall back
 		if(!connection.serverCapabilities.hasAggregationCursor) {
-			collection.aggregate(pipe, _options, function(err, _results) {
+			return collection.aggregate(pipe, _options, function(err, _results) {
 				if(err) return callback(err);
 
 				while(_results.length > 0) {
@@ -106,7 +106,9 @@ var AggregationCursor = function(collection, serverCapabilities, options) {
 		}
 
 		// Execute each using command Cursor
-		commandCursor.each({connection: connection}, callback);		
+		commandCursor.each({connection: connection}, function(err, doc) {
+			callback(err, doc);
+		});		
 	}
 
 	this.next = function(callback) {
